# SnowIt-Marketing-Analytics

./: 06_churn_analysis_between.ipynb  08_sentiment_analysis.ipynb  README.md  pyproject.toml
notebooks/: 01_read&clean_data.ipynb  02_handling_missing_data.ipynb  04_RFM_between.ipynb  05_RFM_within.ipynb  07_churn_analysis_within.ipynb  09_between_2025-2026_marketing_campaign.ipynb  10_within_2024-2025_marketing_campaign.ipynb
